syntax = "proto3";

package OrderAction.events;

option java_multiple_files = true;

message PaymentCancellationEvent{
    string paymentId = 1;
}